zetasql/analyzer/testdata/alter_schema.test
# Tests for unsupported alter schema statements.

ALTER SCHEMA myProject.mySchema
SET AS JSON '{"key": "value"}';

--
ERROR: ALTER SCHEMA does not support SET AS [at 2:1]
SET AS JSON '{"key": "value"}';
^
==

ALTER SCHEMA myProject.mySchema
ADD COLUMN bar STRING;

--
ERROR: ALTER SCHEMA does not support ADD COLUMN [at 2:1]
ADD COLUMN bar STRING;
^
==

ALTER SCHEMA myProject.mySchema
FALSE_ACTION;

--
ERROR: Syntax error: Unexpected identifier "FALSE_ACTION" [at 2:1]
FALSE_ACTION;
^
==

[language_features=V_1_3_COLLATION_SUPPORT,V_1_3_ANNOTATION_FRAMEWORK]
alter schema if exists entity set default collate 'unicode:ci';
--
AlterSchemaStmt
+-name_path=entity
+-alter_action_list=
| +-SetCollateClause
|   +-collation_name=
|     +-Literal(type=STRING, value="unicode:ci")
+-is_if_exists=TRUE
==

[language_features=V_1_3_COLLATION_SUPPORT,V_1_3_ANNOTATION_FRAMEWORK]
alter schema if exists entity set default collate @test_param_string;
--
ERROR: COLLATE must be followed by a string literal [at 1:51]
alter schema if exists entity set default collate @test_param_string;
                                                  ^
